style change and social media buttong target change

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       </div>
     </div>
 
-    <div class="container-fluid about-div" id="about-div">
-      <div class="row mb-0">
+    <div class="container about-div" id="about-div">
+      <div class="row">
         <div class="col">
           <h2>About Me</h2>
           <img
@@ -85,25 +85,25 @@
         <div class="col s4">
           <h4>Front-End</h4>
           <ul class="no-bullets">
-            <li>HTML</li>
-            <li>CSS</li>
             <li>JavaScript</li>
             <li>React</li>
             <li>React-Native</li>
             <li>Bootstrap</li>
             <li>Materialize</li>
             <li>EJS</li>
+            <li>HTML</li>
+            <li>CSS</li>
           </ul>
         </div>
         <div class="col s4">
           <h4>Back-End</h4>
           <ul class="no-bullets">
-            <li>NodeJS</li>
-            <li>Express</li>
-            <li>SQL</li>
             <li>MongoDB</li>
+            <li>SQL</li>
             <li>Django</li>
             <li>Python</li>
+            <li>NodeJS</li>
+            <li>Express</li>
           </ul>
         </div>
         <div class="col s4">
@@ -365,12 +365,21 @@
       <h2>Contact Info</h2>
       <div class="row mb-0">
         <div class="col">
-          <a href="https://github.com/aprin418" class="fa fa-github"></a>
+          <a
+            href="https://github.com/aprin418"
+            target="blank"
+            class="fa fa-github"
+          ></a>
           <a
             href="https://www.linkedin.com/in/aaron-prince-409a1bbb/"
+            target="blank"
             class="fa fa-linkedin"
           ></a>
-          <a href="mailto:aprin418@gmail.com" class="fa fa-envelope"></a>
+          <a
+            href="mailto:aprin418@gmail.com"
+            target="blank"
+            class="fa fa-envelope"
+          ></a>
         </div>
       </div>
     </div>
