--- a/index.html
+++ b/index.html
@@ -202,7 +202,31 @@
                 Pacman, built with basic HTML, CSS, and JavaScript.
               </p>
             </div>
-            <a href="https://lnkd.in/gaRJG65" target="blank" class="card-link"
+            <a
+              href="https://aprin418.github.io/JavaScript-Pacman/"
+              target="blank"
+              class="card-link"
+              >Check it out!</a
+            >
+          </div>
+        </div>
+        <div class="col col-sm-4">
+          <div class="card" style="width: 18rem">
+            <img
+              src="images/War.png"
+              class="card-img-top"
+              alt="Pacman start screen"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                Recreation of the classic game of war with a standard 52 card
+                deck.
+              </p>
+            </div>
+            <a
+              href="https://aprin418.github.io/war-cards/"
+              target="blank"
+              class="card-link"
               >Check it out!</a
             >
           </div>
